--- a/Portfolio1/Application/package.json
+++ b/Portfolio1/Application/package.json
@@ -5,10 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "node server.js",
     "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@hono/node-server": "^1.12.2",
+    "hono": "^4.5.11",
     "vite": "^5.4.1"
   }
 }
